--- a/style/fg_membersite.css
+++ b/style/fg_membersite.css
@@ -83,7 +83,7 @@ border-radius: 10px;
 #fg_membersite .container
 {
    margin-top:8px;
-   margin-bottom: 10px;
+   margin-bottom: 8px;
 }
 
 #fg_membersite .error
@@ -167,23 +167,27 @@ padding-bottom:10px;
 
 #fg_membersite_content table.imagetable {
         font-family: verdana,arial,sans-serif;
-        font-size:11px;
+        font-size:10px;
         color:#333333;
         border-width: 1px;
         border-color: #999999;
         border-collapse: collapse;
 }
+
+#fg_membersite_content table.imagetable tr {
+	height: 10;
+}
 #fg_membersite_content table.imagetable th {
         background:#b5cfd2 url('../images/cell-blue.jpg');
         border-width: 1px;
-        padding: 6px;
+        padding: 4px;
         border-style: solid;
         border-color: #999999;
 }
 #fg_membersite_content table.imagetable td {
         background:#dcddc0 url('../images/cell-grey.jpg');
         border-width: 1px;
-        padding: 6px;
+        padding: 4px;
         border-style: solid;
         border-color: #999999;
 }
