--- a/style/admin.css
+++ b/style/admin.css
@@ -16,7 +16,7 @@
   color: #ffffff;
   display: inline-block;
   font-family: 'Lucida Grande', 'Lucida Sans Unicode', Helvetica, Arial, Verdana, sans-serif;
-  font-size: 12px;
+  font-size: 14px;
   min-width: 35px;
   text-align: center;
   text-decoration: none;
@@ -118,4 +118,75 @@
   line-height: 120%;
   padding: 9px 5px;
   text-align: center;
+}
+
+
+h2.expand_heading {
+    padding: 0 0 0 20px;
+    margin: 0 0 5px 0;
+    background: url(../images/expand_collapse.png) no-repeat;
+    height: 32px;
+    line-height: 38px;
+    width: 700px;
+    font-size: 2em;
+    font-weight: normal;
+    /*float: left;*/
+}
+.expand_all
+{
+cursor:default;
+}
+h2.expand_heading a {
+    color: #fff;
+    font-size: 14px;
+    text-decoration: none;
+    display: block;
+}
+h2.expand_heading a:hover {
+    color: #ccc;
+}
+ 
+h2.active {background-position: left bottom;}
+.toggle_container {
+    margin: 0 0 4px;
+    padding: 0;
+    border-top: 1px solid #d6d6d6;
+    background: #ffffff;
+    overflow: hidden;
+    font-size: 1.2em;
+    width: 100%;
+    clear: both;
+}
+.toggle_container .box {
+    padding: 20px;
+}
+.toggle_container .box p {
+    padding: 5px 0;
+    margin: 5px 0;
+}
+.toggle_container h3 {
+    font: 1.0em normal Georgia, "Times New Roman", Times, serif;
+    margin: 0 0 3px;
+    padding: 0 0 5px 0;
+    color:#000000;
+    border-bottom: 1px dotted #ccc;
+}
+.toggle_container img {
+    float: left;
+    margin: 10px 15px 15px 0;
+    padding: 2px;
+    background: #ddd;
+    border: 1px solid #ccc;
+}
+.expand_all
+{
+width:116px;
+height:28px;
+background:url(../images/extra_buttons.png) no-repeat top left;
+float:left;
+cursor: pointer;
+}
+.expanded
+{
+background-position:bottom left;
 }
