--- a/style/fg_membersite.css
+++ b/style/fg_membersite.css
@@ -166,6 +166,7 @@ padding-bottom:10px;
 }
 
 #fg_membersite_content table.imagetable {
+	display: inline-block;
         font-family: verdana,arial,sans-serif;
         font-size:10px;
         color:#333333;
