--- a/style/admin.css
+++ b/style/admin.css
@@ -1,192 +1,42 @@
-#cssmenu ul,
-#cssmenu li,
-#cssmenu span,
-#cssmenu a {
-  margin: 0;
-  padding: 0;
-  position: relative;
+h2.toggle {
+  width: 700px;
+  padding: 0 0 0 40px;
+  height: 31px;
+  margin: 0 0 0 10px;
+  font-weight: bold;
 }
-#cssmenu:after,
-#cssmenu ul:after {
-  content: '';
-  display: block;
-  clear: both;
-}
-#cssmenu a {
-  color: #ffffff;
-  display: inline-block;
-  font-family: 'Lucida Grande', 'Lucida Sans Unicode', Helvetica, Arial, Verdana, sans-serif;
-  font-size: 14px;
-  min-width: 35px;
-  text-align: center;
-  text-decoration: none;
-  text-shadow: 0 -1px 0 #333333;
-}
-#cssmenu ul {
-  list-style: none;
-}
-#cssmenu > ul > li {
-  float: left;
-  display: inline;
-}
-#cssmenu > ul > li.active a {
-  background: #646464 url(images/grad_dark.png) repeat-x left bottom;
-  background: -moz-linear-gradient(top, #646464 0%, #4a4a4a 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #646464), color-stop(100%, #4a4a4a));
-  background: -webkit-linear-gradient(top, #646464 0%, #4a4a4a 100%);
-  background: -o-linear-gradient(top, #646464 0%, #4a4a4a 100%);
-  background: -ms-linear-gradient(top, #646464 0%, #4a4a4a 100%);
-  background: linear-gradient(to bottom, #646464 0%, #4a4a4a 100%);
-  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#646464', endColorstr='#4a4a4a', GradientType=0);
-  box-shadow: inset 0 0 10px #222222, inset 0 10px 10px #222222;
-  -moz-box-shadow: inset 0 0 10px #222222, inset 0 10px 10px #222222;
-  -webkit-box-shadow: inset 0 0 10px #222222, inset 0 10px 10px #222222;
-  filter: none;
-}
-#cssmenu > ul > li.active a:hover {
-  background: -moz-linear-gradient(top, #646464 0%, #4a4a4a 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #646464), color-stop(100%, #4a4a4a));
-  background: -webkit-linear-gradient(top, #646464 0%, #4a4a4a 100%);
-  background: -o-linear-gradient(top, #646464 0%, #4a4a4a 100%);
-  background: -ms-linear-gradient(top, #646464 0%, #4a4a4a 100%);
-  background: linear-gradient(to bottom, #646464 0%, #4a4a4a 100%);
-  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#646464', endColorstr='#4a4a4a', GradientType=0);
-  filter: none;
-}
-#cssmenu > ul > li a {
-  box-shadow: inset 0 0 0 1px #8a8a8a;
-  -moz-box-shadow: inset 0 0 0 1px #8a8a8a;
-  -webkit-box-shadow: inset 0 0 0 1px #8a8a8a;
-  background: #4a4a4a url(images/grad_dark.png) repeat-x left top;
-  background: -moz-linear-gradient(top, #8a8a8a 0%, #707070 50%, #626262 51%, #787878 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #8a8a8a), color-stop(50%, #707070), color-stop(51%, #626262), color-stop(100%, #787878));
-  background: -webkit-linear-gradient(top, #8a8a8a 0%, #707070 50%, #626262 51%, #787878 100%);
-  background: -o-linear-gradient(top, #8a8a8a 0%, #707070 50%, #626262 51%, #787878 100%);
-  background: -ms-linear-gradient(top, #8a8a8a 0%, #707070 50%, #626262 51%, #787878 100%);
-  background: linear-gradient(to bottom, #8a8a8a 0%, #707070 50%, #626262 51%, #787878 100%);
-  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#8a8a8a', endColorstr='#787878', GradientType=0);
-  border-bottom: 1px solid #5d5d5d;
-  border-top: 1px solid #5d5d5d;
-  border-right: 1px solid #5d5d5d;
-  line-height: 34px;
-  padding: 0 35px;
-  filter: none;
-}
-#cssmenu > ul > li a:hover {
-  background: #8a8a8a url(images/grad_dark.png) repeat-x left bottom;
-  background: -moz-linear-gradient(top, #646464 0%, #4a4a4a 50%, #3b3b3b 51%, #525252 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #646464), color-stop(50%, #4a4a4a), color-stop(51%, #3b3b3b), color-stop(100%, #525252));
-  background: -webkit-linear-gradient(top, #646464 0%, #4a4a4a 50%, #3b3b3b 51%, #525252 100%);
-  background: -o-linear-gradient(top, #646464 0%, #4a4a4a 50%, #3b3b3b 51%, #525252 100%);
-  background: -ms-linear-gradient(top, #646464 0%, #4a4a4a 50%, #3b3b3b 51%, #525252 100%);
-  background: linear-gradient(to bottom, #646464 0%, #4a4a4a 50%, #3b3b3b 51%, #525252 100%);
-  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#8a8a8a', endColorstr='#787878', GradientType=0);
-  filter: none;
-}
-#cssmenu > ul > li:first-child a {
-  border-radius: 5px 0 0 5px;
-  -moz-border-radius: 5px 0 0 5px;
-  -webkit-border-radius: 5px 0 0 5px;
-  border-left: 1px solid #5d5d5d;
-}
-#cssmenu > ul > li:last-child a {
-  border-radius: 0 5px 5px 0;
-  -moz-border-radius: 0 5px 5px 0;
-  -webkit-border-radius: 0 5px 5px 0;
-}
-#cssmenu .has-sub:hover ul {
-  display: block;
-}
-#cssmenu .has-sub ul {
-  display: none;
-  position: absolute;
-  top: 36px;
-  left: -1px;
-  min-width: 100%;
-  text-align: center;
-  /* IE7 */
-
-  *width: 100%;
-}
-#cssmenu .has-sub ul li {
-  text-align: center;
-}
-#cssmenu .has-sub ul li a {
-  border-top: 0 none;
-  border-left: 1px solid #5d5d5d;
-  display: block;
-  line-height: 120%;
-  padding: 9px 5px;
-  text-align: center;
-}
-
-
-h2.expand_heading {
-    padding: 0 0 0 20px;
-    margin: 0 0 5px 0;
-    background: url(../images/expand_collapse.png) no-repeat;
-    height: 32px;
-    line-height: 38px;
-    width: 700px;
-    font-size: 2em;
-    font-weight: normal;
-    /*float: left;*/
-}
-.expand_all
-{
-cursor:default;
-}
-h2.expand_heading a {
+h2.toggle a {
     color: #fff;
-    font-size: 14px;
     text-decoration: none;
+    font-size: 16px;
+    line-height: 31px;
     display: block;
 }
+h2.trigger
+{
+  background:url(../images/togglebar.png) left top no-repeat;
+}
+h2.active
+{
+  background:url(../images/togglebar.png) left bottom no-repeat;
+}
+
 h2.expand_heading a:hover {
     color: #ccc;
 }
- 
-h2.active {background-position: left bottom;}
-.toggle_container {
+
+div.toggle_container {
     margin: 0 0 4px;
-    padding: 0;
-    border-top: 1px solid #d6d6d6;
+    padding: 10px;
     background: #ffffff;
-    overflow: hidden;
+    border-top: 0px solid #d6d6d6;
     font-size: 1.2em;
     width: 100%;
-    clear: both;
+    overflow: hidden;
 }
-.toggle_container .box {
-    padding: 20px;
-}
-.toggle_container .box p {
-    padding: 5px 0;
-    margin: 5px 0;
-}
-.toggle_container h3 {
-    font: 1.0em normal Georgia, "Times New Roman", Times, serif;
-    margin: 0 0 3px;
-    padding: 0 0 5px 0;
-    color:#000000;
-    border-bottom: 1px dotted #ccc;
-}
-.toggle_container img {
-    float: left;
-    margin: 10px 15px 15px 0;
-    padding: 2px;
-    background: #ddd;
-    border: 1px solid #ccc;
-}
-.expand_all
-{
-width:116px;
-height:28px;
-background:url(../images/extra_buttons.png) no-repeat top left;
-float:left;
-cursor: pointer;
-}
-.expanded
-{
-background-position:bottom left;
+
+div.left {
+  float: left;
+  width: 50%;
+  margin: 10px 20px;
 }
