--- a/style/fg_membersite.css
+++ b/style/fg_membersite.css
@@ -150,11 +150,12 @@ font-family : Arial, sans-serif;
 padding-top:10px;
 padding-bottom:10px;
 }
+
 #fg_membersite_content
 {
     font-family : Arial, sans-serif;
     font-size: 0.9em;
-    line-height: 150%
+    line-height: 150%;
 }
 
 #fg_membersite_content h2
@@ -176,7 +177,7 @@ padding-bottom:10px;
 }
 
 #fg_membersite_content table.imagetable tr {
-	height: 10;
+	height: 10px;
 }
 #fg_membersite_content table.imagetable th {
         background:#b5cfd2 url('../images/cell-blue.jpg');
