--- a/style/admin.css
+++ b/style/admin.css
@@ -1,5 +1,5 @@
 h2.toggle {
-  width: 700px;
+  width: 70%;
   padding: 0 0 0 40px;
   height: 31px;
   margin: 0 0 0 10px;
@@ -28,7 +28,7 @@ h2.toggle a:hover {
 
 div.toggle_container {
     margin: 0 0 4px 0;
-    padding: 10px;
+    padding: 10px 0 0 0;
     background: #ffffff;
     border-top: 0px solid #d6d6d6;
     font-size: 1.2em;
@@ -39,7 +39,7 @@ div.toggle_container {
 div.left {
   float: left;
   width: 50%;
-  margin: 10px 20px;
+  margin: 10px 12px;
 }
 
 label {
