--- a/style/header.css
+++ b/style/header.css
@@ -16,9 +16,10 @@
   color: #ffffff;
   display: inline-block;
   font-family: 'Lucida Grande', 'Lucida Sans Unicode', Helvetica, Arial, Verdana, sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   min-width: 35px;
   text-align: center;
+  font-weight: bold;
   text-decoration: none;
   text-shadow: 0 -1px 0 #333333;
 }
@@ -82,7 +83,7 @@
   background: linear-gradient(to bottom, #646464 0%, #4a4a4a 50%, #3b3b3b 51%, #525252 100%);
   filter: progid:dximagetransform.microsoft.gradient(startColorstr='#8a8a8a', endColorstr='#787878', GradientType=0);
   filter: none;
-  color: #0ab0f6;
+  color: #3ed0d2;
 }
 #cssmenu > ul > li:first-child a {
   border-radius: 5px 0 0 5px;
