--- a/style/pwdwidget.css
+++ b/style/pwdwidget.css
@@ -17,7 +17,8 @@
 .pwdopsdiv a
 {
 	font-family : Arial, Helvetica, sans-serif;
-	font-size : 10px; 
+	font-size : 10px;
+	color: #fff;
 }
 
 .pwdstrengthbar
