--- a/style/fg_membersite.css
+++ b/style/fg_membersite.css
@@ -214,3 +214,48 @@ padding-bottom:10px;
         border-color: #333;
         text-align: center;
 }
+
+div.webcamPlugin {
+   border: solid;
+   border-color: #000;
+   margin: 0;
+}
+
+div.webcamButtons input {
+   height: 30px;
+   width: 60px;
+   font-size: 16px;
+   font-weight: bold;
+}
+
+div.webcamLabels label {
+   color: #000;
+   font-size: 14px;
+}
+
+#loading-div-background 
+{
+   display:none;
+   position:fixed;
+   top:0;
+   left:0;
+   background:black;
+   width:100%;
+   height:100%;
+}
+     
+#loading-div
+{
+   width: 300px;
+   height: 200px;
+   background-color: #FFF;
+   text-align:center;
+   position:absolute;
+   left: 50%;
+   top: 50%;
+   margin-left:-150px;
+   margin-top: -100px;
+   border: solid;
+   border-width: medium;
+   border-color: black;
+}
