--- a/style/admin.css
+++ b/style/admin.css
@@ -40,7 +40,7 @@ h2.toggle a:hover {
 }
 
 a img.group_logo {
-  margin: 0 0 0 15px;
+  margin: 0 0 6px 15px;
   height: 30px;
   width: 32px;
   vertical-align: middle;
