Added one chart and fixed some problem with charts creation.

--- a/style/admin.css
+++ b/style/admin.css
@@ -237,7 +237,7 @@ div.video_loading img
     };
 }
 
-#dashboard_user_numberbyrole div {
+#dashboard_user_charts div {
   display:inline-block;
   float: left;
   width:400px;
