--- a/style/demo.css
+++ b/style/demo.css
@@ -46,8 +46,8 @@
 		margin-top: -245px;*/
 		padding-bottom: 10px;
 		padding-top: 10px;
-		/*left: 50%;
-		top: 50%;*/
+		left: 10%;
+		top: 20%;
 		width: 1200px;
 		height: 600px;
 		border-radius: 6px;
