--- a/style/demo.css
+++ b/style/demo.css
@@ -46,7 +46,7 @@
 		margin-top: -245px;*/
 		padding-bottom: 10px;
 		padding-top: 10px;
-		left: 10%;
+		left: 5%;
 		top: 20%;
 		width: 1200px;
 		height: 600px;
@@ -110,6 +110,18 @@
 		margin: 4px;
 		height: 226px;
 		line-height: 226px;
+		background-repeat: no-repeat;
+		background-position: center center;
+		/*background-image: url( ../images/webcam.png );*/
+		background-color: rgb(239, 239, 239);
+		border: 1px solid rgba(0, 0, 0, 0.15);
+	}
+	
+	.local-stream .span6 {
+		position: relative;
+		float: left;
+		height: 240px;
+		width: 240px;
 		background-repeat: no-repeat;
 		background-position: center center;
 		/*background-image: url( ../images/webcam.png );*/
