--- a/style/demo.css
+++ b/style/demo.css
@@ -117,8 +117,7 @@
 		border: 1px solid rgba(0, 0, 0, 0.15);
 	}
 	
-	.local-stream .span6 {
-		position: relative;
+	.local-stream {
 		float: left;
 		height: 240px;
 		width: 240px;
