--- a/style/demo.css
+++ b/style/demo.css
@@ -2,16 +2,6 @@
 		/*background-image: url( ../images/wood.png );*/
 	}
 
-	.bistri-logo {
-		position: absolute;
-		top: 20px;
-		left: 50px;
-		width: 280px;
-		height: 60px;
-		background-repeat: no-repeat;
-		/*background-image: url( ../images/logo-bistri-developers-280x60.png );*/
-	}
-
 	/* stripes animation */
 	.stripes {
 		display: none;
@@ -121,6 +111,8 @@
 		float: left;
 		height: 240px;
 		width: 240px;
+		margin-top: 20px;
+		margin-left: 10px;
 		background-repeat: no-repeat;
 		background-position: center center;
 		/*background-image: url( ../images/webcam.png );*/
