--- a/style/demo.css
+++ b/style/demo.css
@@ -32,14 +32,12 @@
 
 	.conference {
 		position: absolute;
-		/*margin-left: -470px;
-		margin-top: -245px;*/
 		padding-bottom: 10px;
 		padding-top: 10px;
 		left: 5%;
-		top: 20%;
+		top: 5%;
 		width: 1200px;
-		height: 600px;
+		height: 800px;
 		border-radius: 6px;
 		-moz-border-radius: 6px;
 		-webkit-border-radius: 6px;
@@ -74,7 +72,7 @@
 	}
 
 	.device-selector .span12 {
-		padding: 166px 0;
+		padding: 100px 0;
 	}
 
 	.connection{
@@ -97,6 +95,7 @@
 
 	.remote-streams .span6 {
 		position: relative;
+		text-align: center;
 		margin: 4px;
 		height: 226px;
 		/*line-height: 226px;*/
