--- a/style/admin.css
+++ b/style/admin.css
@@ -1,3 +1,25 @@
+/* BOOTSTRAP CUSTOMIZATION */
+
+.table > tbody > tr > th {
+    background-color: #333;
+    color: #fff;
+    border-color: #fff;
+}
+
+.table > tbody > tr:hover > th {
+  background-color: #333;
+}
+
+.table-hover > tbody > tr:hover > td {
+  background-color: #3c78c3;
+  color: #fff;
+}
+
+.table-hover > tbody > tr.active:hover > td {
+  color: #000;
+}
+
+
 h2.toggle {
   width: 665px;
   padding: 0 0 0 40px;
@@ -254,7 +276,7 @@ div.video_loading
         -moz-transform: scale(0.7);
         opacity: 0.1;
     };
-}
+} 
 
 @-webkit-keyframes move {
     0% {
