--- a/style/admin.css
+++ b/style/admin.css
@@ -19,26 +19,35 @@
   color: #000;
 }
 
-.nav {
+.nav, 
+.navbar {
   background-color: #333;
   font-size: 1.2em;
 }
 
-.nav a {
+.nav a, 
+.navbar a {
   color: #fff;
 }
 
-.nav .open > a, .nav .open > a:hover, .nav .open > a:focus {
+.nav .open > a, 
+.nav .open > a:hover, 
+.nav .open > a:focus,
+.navbar .open > a, 
+.navbar .open > a:hover, 
+.navbar .open > a:focus {
   color: #fff;
   background-color: #3c78c3;
 }
 
-.nav > li > a:hover {
+.nav > li > a:hover,
+.navbar > li > a:hover {
   color: #fff;
   background-color: #3c78c3;
 }
 
-.nav img {
+.nav img, 
+.navbar img {
   margin: 0 4px 0 2px;
   padding: 2px 2px 2px 2px;
 }
