--- a/style/admin.css
+++ b/style/admin.css
@@ -19,12 +19,12 @@
   color: #000;
 }
 
-.nav, .navbar {
+.nav, .navbar, .navbar-nav {
   background-color: #333;
   font-size: 1.2em;
 }
 
-.nav a {
+.nav a, .navbar-nav {
   color: #fff;
 }
 
