--- a/style/admin.css
+++ b/style/admin.css
@@ -35,7 +35,8 @@
   background-color: #3c78c3;
 }
 
-.nav > li > a:hover {
+.nav > li > a:hover,
+.navbar-nav > li > a:hover {
   color: #fff;
   background-color: #3c78c3;
 }
