Changed header from nav to navbar.

--- a/style/admin.css
+++ b/style/admin.css
@@ -24,13 +24,13 @@
   font-size: 1.2em;
 }
 
-.nav a, .navbar-nav {
+.nav a, .navbar-nav a {
   color: #fff;
 }
 
-.nav .open > a, 
-.nav .open > a:hover, 
-.nav .open > a:focus {
+.nav .open > a, .navbar-nav .open > a,
+.nav .open > a:hover, .navbar-nav .open > a:hover,
+.nav .open > a:focus, .navbar-nav .open > a:focus {
   color: #fff;
   background-color: #3c78c3;
 }
