--- a/style/admin.css
+++ b/style/admin.css
@@ -19,7 +19,9 @@
   color: #000;
 }
 
-.nav, .navbar, .navbar-nav {
+.nav > 
+.navbar > 
+.navbar-nav {
   background-color: #333;
   font-size: 1.2em;
 }
@@ -35,7 +37,11 @@
   background-color: #3c78c3;
 }
 
-.nav > li > a:hover,
+.nav > li > a:hover {
+  color: #fff;
+  background-color: #3c78c3;
+}
+
 .navbar-nav > li > a:hover {
   color: #fff;
   background-color: #3c78c3;
