Changed header from nav to navbar.

--- a/style/admin.css
+++ b/style/admin.css
@@ -30,22 +30,16 @@
   color: #fff;
 }
 
-.nav .open > a, 
-.navbar-nav .open > a,
+.nav .open > a
 .nav .open > a:hover,
 .nav .open > a:focus {
   color: #fff;
   background-color: #3c78c3;
 }
 
-.navbar-nav .open > a:hover {
-  color: #fff;
-  background-color: #3c78c3;
-}
-
-.navbar-nav .open > a:focus {
-  color: #fff;
-  background-color: #3c78c3;
+.navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
+    color: #fff;
+    background-color: #3c78c3;
 }
 
 .nav > li > a:hover {
