--- a/style/admin.css
+++ b/style/admin.css
@@ -48,15 +48,13 @@
 .navbar-nav > li > a {
     color: #fff;
 }
-
 .navbar-default
 .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
     color: #fff;
     background-color: #3c78c3;
 }
-
-.navbar-nav > li > a:hover {
-  color: #fff;
+.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
+    color: #fff;
   background-color: #3c78c3;
 }
 
