--- a/style/admin.css
+++ b/style/admin.css
@@ -59,7 +59,7 @@
 }
 
 .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
-    background-color: #333;
+    background-color: #3c78c3;
     color: #fff;
 }
 
