Changed ondemand video list into checked-list-box type.

--- a/style/admin.css
+++ b/style/admin.css
@@ -427,3 +427,16 @@ div.table_container {
   float: left;
   margin:10px;
 }
+
+
+
+/**********************************/
+/*** ONDEMAND CHECKBOX LIST CSS ***/
+/**********************************/
+.state-icon {
+    left: -5px;
+}
+.list-group-item-primary {
+    color: rgb(255, 255, 255);
+    background-color: rgb(66, 139, 202);
+}
