--- a/style/admin.css
+++ b/style/admin.css
@@ -435,6 +435,7 @@ div.table_container {
 /**********************************/
 .state-icon {
     left: -5px;
+    display:inline;
 }
 .list-group-item-primary {
     color: rgb(255, 255, 255);
