Refactoring events_ondemand.php page style.

--- a/style/admin.css
+++ b/style/admin.css
@@ -237,11 +237,13 @@ ul.video_element
   width: 100%;
 }
 
+/*
 ul.video_element:hover
 {
   background-color: #3c78c3;
   color: #fff;
 }
+*/
 
 ul.video_element li
 {
